...
    <string name="points">points</string>
    <string name="nbr_quizz_played">Nombre de quizzes joués</string>
    <string name="default_hint">Ecrivez ici</string>
    <string name="no_entrie">Vous n\'avez rien saisi</string>
    <string name="change_made">Modification effectuée</string>
    <string name="cancel">Annuler</string>
    <string name="continue_">Continuer</string>
    <string name="quit">Quitter</string>
    <string name="quit_question">Voulez-vous quitter &appnamekey; ?</string>
    <string name="back_to_home">Retourner a l\'accueil ?</string>
    <string name="error">Une erreur s\'est produite..veuillez reessayer</string>
    <string name="finish_">Terminé</string>
    <string name="return_">Retour</string>
    <string name="no_connection_msg">Vous devez etre connecté a Internet pour continuer !</string>
...
    <string name="quizz_question">Quel pays represente ce drapeau ?</string>
    <string name="answer">Reponse</string>
    <string name="loading_text">Preparation du Quizz, veuillez patienter...</string>
    <string name="zero_points">0 pts</string>
    <string name="img_load">Chargement de l\'image en cours..</string>
    <string name="question">Quel pays represente ce drapeau ?</string>
    <string name="good_answer">Bonne reponse !</string>
    <string name="good_answer_was">La bonne reponse etait :</string>
    <string name="time_elapsed">Temps ecoulé !</string>
    <string name="wrong">Faux !</string>
    <string name="quizz_finish">Quiz termine !</string>
    <string name="game_finish">Partie terminee !</string>
    <string name="restart_quizz">Rejouer ce quiz</string>

</resources>

